<resources>
    <string name="app_name">GusGus.App</string>
    <string name="login_title">Bienvenido de nuevo</string>
    <string name="login_subtitle">Estamos listos \npara ti</string>

    <string name="signup1_title">Hola!</string>
    <string name="signup1_subtitle">Comenzemos</string>

    <string name="signup2_title">Si!</string>
    <string name="signup2_subtitle">Ya estamos por \nfinalizar</string>

    <string name="menu_title">¿Que probaras hoy?</string>
    <string name="msg_good_morning">Buenos Días</string>

    <string name="title_profileFrag">MI PERFIL</string>
    <string name="subtitle_profileFrag">Tú y GusGus</string>

    <string name="editProfile_subtitle">MIS DATOS</string>

    <string name="title_ordersFrag">PEDIDOS</string>


    <string name="title_gusgus">Gus.Gus</string>
    <string name="title_search">Buscar</string>
    <string name="title_orders">Pedidos</string>
    <string name="title_profile">Perfil</string>

    <string name="title_activity_client_main">ClientMainActivity</string>
    <string name="tx_nameClient">Alex Pilco</string>
    <string name="tx_creations">Mis creaciones</string>
    <string name="tx_poweroff">Cerrar Sesión</string>

    <string name="nombreProductAdmin">Productos</string>
    <string name="nombrePedidosAdmin">Pedidos</string>
    <string name="nombrePublicidadAdmin">Publicidad</string>
    <string name="nombreUsuariosAdmin">Usuarios</string>
    <string name="nombreProducto">Nombre:</string>

    <string name="tx_signUpNow">Registrate</string>
    <string name="tx_singIn">INICIAR SESIÓN</string>
    <string name="tx_user">Usuario</string>
    <string name="tx_password">Contraseña</string>
    <string name="tx_noAccount">¿No tienes una cuenta?</string>

    <string name="tx_confirmPassword">Confirmar Contraseña</string>
    <string name="tx_name">Nombre</string>
    <string name="tx_phone">Telefono</string>
    <string name="tx_address">Dirección</string>
    <string name="tx_haveAccount">¿Ya tienes una cuenta?</string>
    <string name="tx_signinNow">Inicia Sesión</string>
    <string name="tx_next">SIGUIENTE</string>
    <string name="tx_signup">REGISTRAR</string>

    <string name="tx_noOptionSelected">Aun no has seleccionado \nninguna opción</string>

    <string name="tx_altura">Altura</string>
    <string name="tx_sabor">Sabor</string>
    <string name="tx_diametro">Diámetro</string>
    <string name="tx_relleno">Relleno</string>
    <string name="tx_cubierta">Cubierta</string>
    <string name="tx_realizarpedido">REALIZAR PEDIDO</string>

    <string name="img_login_description">gato decorando pastel</string>
    <string name="tx_category">CATEGORIA</string>
    <string name="tx_distrito">Distrito</string>
    <string name="tx_editar">Editar</string>
    <string name="tx_save">Guardar</string>
    <string name="tx_messageChangePassword">Por favor ingrese su \ncontraseña actual para poder\ncambiar su contraseña</string>
    <string name="tx_confirm">Confirmar</string>
    <string name="title_changepassword">VERIFICAR</string>
    <string name="tx_examplePassword">*********************</string>
    <string name="subtitle_confirm_order">Datos de envio</string>
    <string name="tx_subtotal">Subtotal</string>
    <string name="tx_envio">Envio</string>
    <string name="tx_total">Total</string>
    <string name="tx_espera">EN ESPERA</string>
    <string name="tx_pendiente">PENDIENTE</string>
    <string name="tx_enviado">ENVIADO</string>
    <string name="tx_cancelado">CANCELADO</string>
    <string name="title_confirm_order">Cumpleañer@</string>
    <string name="msg_comentario_torta">Quiero que mi torta sea de tematica de tokio, que incluya objetos o lugares mas destacados del lugar.</string>
    <string name="tx_confirmOrder">Confirmar Pedido</string>
    <string name="title_tortas_personalizadas">MIS CREACIONES</string>
    <string name="tx_lastname">Apellido</string>
    <string name="tx_img">Subir Imagen</string>
    <string name="tx_description">Descripción</string>
    <string name="tx_edit">Editar</string>
    <string name="tx_publicar">Publicar</string>
    <string name="tx_rgbcolor">Color rgb</string>
    <string name="tx_date">--/--/--</string>
    <string name="tx_time">0:00pm</string>
    <string name="tx_detalle_mensaje">Feliz Cumpleaños</string>
    <string name="tx_precio">Precio</string>
    <string name="tx_color">Color</string>


</resources>