<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    tools:context=".view.ui.LoginActivity">

    <TextView
        android:id="@+id/tv_title_login"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitle_login"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_subtitle_login"
        style="@style/SubtitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/et_usuario_login"
        app:layout_constraintStart_toStartOf="@+id/et_usuario_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_login" />

    <EditText
        android:id="@+id/et_usuario_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/tx_user"
        android:inputType="textPersonName"
        android:maxWidth="270dp"
        android:minWidth="250dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/et_contrasenia_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_login" />

    <EditText
        android:id="@+id/et_contrasenia_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/tx_password"
        android:inputType="textPassword"
        android:maxWidth="270dp"
        android:minWidth="250dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario_login" />

    <ImageView
        android:id="@+id/iv_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_haveaccount_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasenia_login"
        app:srcCompat="@drawable/catbaker" />

    <TextView
        android:id="@+id/tv_haveaccount_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tx_haveAccount"
        app:layout_constraintBottom_toTopOf="@+id/btn_iniciarsesion_login"
        app:layout_constraintEnd_toStartOf="@+id/tv_registrarse_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_image" />

    <TextView
        android:id="@+id/tv_registrarse_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/tx_signUpNow"
        android:textColor="@color/title_subtitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_haveaccount_login"
        app:layout_constraintTop_toTopOf="@+id/tv_haveaccount_login" />

    <Button
        android:id="@+id/btn_iniciarsesion_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_corner"
        android:text="@string/tx_singIn"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_haveaccount_login" />
</androidx.constraintlayout.widget.ConstraintLayout>