<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    tools:context=".view.ui.AddNoticiaActivity">

    <ImageView
        android:id="@+id/iv_back_addnoticia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back2"
        app:tint="@color/dark" />

    <ImageView
        android:id="@+id/iv_image_addnoticia"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_addnoticia"
        app:srcCompat="@drawable/ic_smile" />

    <ImageButton
        android:id="@+id/btn_subirimg_addnoticia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_corner"
        android:padding="10dp"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toBottomOf="@+id/iv_image_addnoticia"
        app:layout_constraintEnd_toEndOf="@+id/iv_image_addnoticia"
        app:srcCompat="@drawable/ic_upload"
      />

    <EditText
        android:id="@+id/et_nombre_addnoticia"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/RoundedLigthEditText"
        android:hint="@string/tx_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_addnoticia" />

    <Switch
        android:id="@+id/swt_visibilidad_addnoticia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:minHeight="48dp"
        android:text="@string/tx_publicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion_addnoticia" />

    <Button
        android:id="@+id/btn_guardar_addnoticia"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/tx_save"
        style="@style/RoundedLigthButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_descripcion_addnoticia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="start|top"
        style="@style/RoundedLigthEditText"
        android:hint="@string/tx_description"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_addnoticia" />


</androidx.constraintlayout.widget.ConstraintLayout>