<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    tools:context=".view.ui.ChangePasswordActivity">

    <ImageView
        android:id="@+id/iv_back_chngpassword"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back2" />

    <RelativeLayout
        android:id="@+id/rl_imgcontainer_chngpassword"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_chngpassword">

        <ImageView
            android:id="@+id/iv_fish_chngpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/fish" />

        <ImageView
            android:id="@+id/iv_key_chngpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            app:srcCompat="@drawable/key" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_validate_chngpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_imgcontainer_chngpassword">

        <TextView
            android:id="@+id/iv_message_chngpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tx_messageChangePassword"
            android:textAlignment="center"
            android:textColor="@color/text2"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_confcontrasenia_chngpassword"
            style="@style/RoundedLigthEditText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/tx_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_message_chngpassword"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_confirnar_chngpassword"
            style="@style/RoundedLigthButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/tx_confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confcontrasenia_chngpassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_update_chngpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_imgcontainer_chngpassword">

        <TextView
            android:id="@+id/tv_contrasenia_chngpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tx_password"
            android:textColor="@color/text"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/et_nuevacontrasenia_chngpassword"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_confcontrasenia_chngpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/tx_confirmPassword"
            android:textColor="@color/text"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/et_confnuevacontrasenia_chngpassword"
            app:layout_constraintTop_toBottomOf="@+id/et_nuevacontrasenia_chngpassword" />

        <Button
            android:id="@+id/btn_guardar_chngpassword"
            style="@style/RoundedLigthButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tx_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confnuevacontrasenia_chngpassword" />

        <EditText
            android:id="@+id/et_nuevacontrasenia_chngpassword"
            style="@style/RoundedLigthEditText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tx_examplePassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_contrasenia_chngpassword" />

        <EditText
            android:id="@+id/et_confnuevacontrasenia_chngpassword"
            style="@style/RoundedLigthEditText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tx_examplePassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confcontrasenia_chngpassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>